--- a/composer.json
+++ b/composer.json
@@ -3,11 +3,24 @@
     "license": "proprietary",
     "type": "project",
     "description": "Sulu demo website",
-    "keywords": ["symfony", "sulu", "cms", "application", "admin"],
+    "keywords": [
+        "symfony",
+        "sulu",
+        "cms",
+        "application",
+        "admin"
+    ],
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/christophberger/acme-event-bundle.git"
+        }
+    ],
     "require": {
         "php": "^8.1",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "acme/event-bundle": "dev-main",
         "dantleech/phpcr-migrations-bundle": "^1.3",
         "doctrine/doctrine-bundle": "^2.5",
         "doctrine/doctrine-fixtures-bundle": "^3.4",
