--- a/config/routes/sulu_admin.yaml
+++ b/config/routes/sulu_admin.yaml
@@ -1,7 +1,7 @@
 sulu_tag_api:
     resource: "@SuluTagBundle/Resources/config/routing_api.yml"
     type: rest
-    prefix:   /admin/api
+    prefix: /admin/api
 
 sulu_admin:
     resource: "@SuluAdminBundle/Resources/config/routing.yml"
@@ -105,5 +105,10 @@ sulu_activity_api:
 
 sulu_trash_api:
     resource: "@SuluTrashBundle/Resources/config/routing_api.yml"
+    type: rest
+    prefix: /admin/api
+
+acme_event_api:
+    resource: "@AcmeEventBundle/config/routing_api.yml"
     type: rest
     prefix: /admin/api
