--- a/config/services.yaml
+++ b/config/services.yaml
@@ -9,19 +9,19 @@ parameters:
 services:
     # default configuration for services in *this* file
     _defaults:
-        autowire: true      # Automatically injects dependencies in your services.
+        autowire: true # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
         bind:
-            Doctrine\ORM\EntityManagerInterface: '@doctrine.orm.entity_manager'
+            Doctrine\ORM\EntityManagerInterface: "@doctrine.orm.entity_manager"
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
     App\:
-        resource: '../src/'
+        resource: "../src/"
         exclude:
-            - '../src/DependencyInjection/'
-            - '../src/Entity/'
-            - '../src/Kernel.php'
+            - "../src/DependencyInjection/"
+            - "../src/Entity/"
+            - "../src/Kernel.php"
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
@@ -29,7 +29,15 @@ services:
         decorates: sulu_security.build.user
 
     App\Content\Type\SingleAlbumSelection:
-        tags: [{name: 'sulu.content.type', alias: 'single_album_selection'}]
+        tags: [{ name: "sulu.content.type", alias: "single_album_selection" }]
 
     App\Content\Type\AlbumSelection:
-        tags: [{name: 'sulu.content.type', alias: 'album_selection'}]
+        tags: [{ name: "sulu.content.type", alias: "album_selection" }]
+
+    # acme_event.event_controller:
+    #     public: true
+    #     class: Acme\EventBundle\Controller\Admin\EventController
+    #     tags:
+    #         - { name: "sulu.context", context: "admin" }
+    #         - { name: "controller.service_arguments" }
+    #         - { name: "container.service_subscriber" }
